# ptpyeobi

./: .gitignore  README-GOT.md  README-SURYA.md  README.md  install.bat  run.bat  update.bat  디자인_미리보기.html  사용법.txt
.claude/: launch.json
backend/: .env.example  pyproject.toml  requirements-got.txt  requirements-surya.txt  requirements.txt
backend/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py  seed.py  settings_store.py
backend/app/routers/: admin.py  auth.py  biz_systems.py  calculate.py  opinet.py  trips.py  uploads.py
backend/app/services/: calculator.py  exporter.py  importer.py  opinet_client.py
backend/app/services/ocr/: _image_split.py  base.py  claude_vision.py  factory.py  got.py  local.py  mock.py  surya.py  upstage.py
backend/tests/: test_calculator.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CalculationCard.jsx  FuelPriceCard.jsx  Header.jsx  LedgerAddCard.jsx  LedgerCard.jsx  PasswordChangeModal.jsx  PayoutSummary.jsx  ReceiptEditor.jsx  UploadCard.jsx
frontend/src/components/ui/: CalcRow.jsx  Card.jsx  Counter.jsx  EditableField.jsx  Logo.jsx  Pill.jsx
frontend/src/hooks/: useAuth.js  useTravelExpense.js
frontend/src/lib/: api.js  compute.js  constants.js  mockData.js
frontend/src/pages/: LoginPage.jsx
frontend/src/pages/admin/: AdminBizSystemPage.jsx  AdminLayout.jsx  AdminLedgerPage.jsx  AdminSettingsPage.jsx
