[project]
name = "yeobi-ttukttak-backend"
version = "0.1.0"
description = "여비뚝딱 — 여비정산 자동화 백엔드 (FastAPI + SQLite)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "openpyxl>=3.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
